--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
 
-        <nav class="nav-container">
+        <!-- <nav class="nav-container">
             <div id="logo">
                 <img src="https://img.icons8.com/ios/50/000000/nl-logo.png"/>
             </div>
@@ -18,11 +18,11 @@
                 </div>
                     <img src="https://img.icons8.com/metro/52/000000/user-male-circle.png" class="user">
             </div>
-        </nav>
+        </nav> -->
 
 
 
-        <div class="content-container">
+        <!-- <div class="content-container">
             <div class="content">
                 <h3 id="status">Status: <span style="color: #25d30a;">Checked In!!</span><br><a href="#" style="font-size: 0.9rem; color: gray; font-weight: 600;">Checkout->></a></h3>
             </div>
@@ -101,6 +101,6 @@
                     <div class="subject-properties" id="class-mark-attendance">Not Attending</div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </body>
 </html>
