--- a/comm_page/grp_post.html
+++ b/comm_page/grp_post.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,52 +10,31 @@
 
     </style>
 </head>
+
 <body>
-    <div class="w-full px-10 py-10 bg-gray-200">
-        <div class="grid xl:grid-cols-3 gap-8 xl:text-base md:grid-cols-2 md:text-sm sm:grid-col-1 sm:text-xs">
-            <div class="text-center rounded-lg flex flex-col bg-white hover:shadow-xl transition-all duration-500 ease-in-out">
-                <h2 class="my-2 text-xl flex items-center"><img src="https://img.icons8.com/cotton/50/000000/name.png" class="w-12 my-2 mx-3">Mentor Name</h2>
-                <img src="bg.jpg" class="w-full px-2">
-                <div class="px-4 py-2">
-                <h1 class="float-left text-lg my-2 mx-2">Post Heading</h1>
-                <h1 class="float-right text-lg my-2 mx-2 text-gray-500">Creation Date</h1>
-                <div class="float-right">
-                <p class="clear-both my-2 mx-2 text-left"><b>Description: </b>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate dolorum perspiciatis veritatis saepe dignissimos laboriosam fugiat delectus quibusdam facere. Ad!</p>
-                </div>
-                </div>
+    <div class=" px-10 py-10 bg-gray-200">
+        <div
+            class="text-center max-w-xl mx-auto rounded-lg flex flex-col bg-white hover:shadow-xl transition-all duration-500 ease-in-out">
+
+            <h2 class="my-2 text-xl flex items-center">
+                <img src="https://img.icons8.com/cotton/50/000000/name.png" class="w-12 my-2 mx-3">
+                Community Name
+            </h2>
+            <div class="px-4 py-2">
+                <h1 class="text-left text-lg my-2 mx-2 text-gray-500">Creation Date</h1>
+                <h1 class=" text-lg my-2 mx-2">Post Heading</h1>
             </div>
-            <div class="text-center rounded-lg flex flex-col bg-white hover:shadow-xl transition-all duration-500 ease-in-out">
-                <h2 class="my-2 text-xl flex items-center"><img src="https://img.icons8.com/cotton/50/000000/name.png" class="w-12 my-2 mx-3">Mentor Name</h2>
-                <img src="bg.jpg" class="w-full px-2">
-                <div class="px-4 py-2">
-                <h1 class="float-left text-lg my-2 mx-2">Post Heading</h1>
-                <h1 class="float-right text-lg my-2 mx-2 text-gray-500">Creation Date</h1>
-                <div class="float-right">
-                <p class="clear-both my-2 mx-2 text-left"><b>Description: </b>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate dolorum perspiciatis veritatis saepe dignissimos laboriosam fugiat delectus quibusdam facere. Ad!</p>
-                </div>
-                </div>
-            </div><div class="text-center rounded-lg flex flex-col bg-white hover:shadow-xl transition-all duration-500 ease-in-out">
-                <h2 class="my-2 text-xl flex items-center"><img src="https://img.icons8.com/cotton/50/000000/name.png" class="w-12 my-2 mx-3">Mentor Name</h2>
-                <img src="bg.jpg" class="w-full px-2">
-                <div class="px-4 py-2">
-                <h1 class="float-left text-lg my-2 mx-2">Post Heading</h1>
-                <h1 class="float-right text-lg my-2 mx-2 text-gray-500">Creation Date</h1>
-                <div class="float-right">
-                <p class="clear-both my-2 mx-2 text-left"><b>Description: </b>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate dolorum perspiciatis veritatis saepe dignissimos laboriosam fugiat delectus quibusdam facere. Ad!</p>
-                </div>
-                </div>
-            </div><div class="text-center rounded-lg flex flex-col bg-white hover:shadow-xl transition-all duration-500 ease-in-out">
-                <h2 class="my-2 text-xl flex items-center"><img src="https://img.icons8.com/cotton/50/000000/name.png" class="w-12 my-2 mx-3">Mentor Name</h2>
-                <img src="bg.jpg" class="w-full px-2">
-                <div class="px-4 py-2">
-                <h1 class="float-left text-lg my-2 mx-2">Post Heading</h1>
-                <h1 class="float-right text-lg my-2 mx-2 text-gray-500">Creation Date</h1>
-                <div class="float-right">
-                <p class="clear-both my-2 mx-2 text-left"><b>Description: </b>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate dolorum perspiciatis veritatis saepe dignissimos laboriosam fugiat delectus quibusdam facere. Ad!</p>
-                </div>
-                </div>
-            </div>
+
+            <img src="bg.jpg" class="w-full px-2">
+
+            <p class="clear-both my-2 mx-2 text-left px-4 py-2"><b>Description: </b>Lorem ipsum dolor sit amet
+                consectetur, adipisicing elit. Voluptate dolorum perspiciatis veritatis saepe dignissimos
+                laboriosam fugiat delectus quibusdam facere. Ad!</p>
+
+
         </div>
+
     </div>
 </body>
+
 </html>
