Signup Addedgit add --all

--- a/landing-page-html/index.html
+++ b/landing-page-html/index.html
@@ -37,7 +37,7 @@
         <div class="content-container">
             <div class="content" id="status">
                 Status : <span>Checked in !!</span><br>
-                <a id="checkout">Checkout</a>
+                <p id="checkout">Checkout</p>
                 
             </div>
 
